fix remaining scroll issue on iOS safari

--- a/src/screens/game.module.css
+++ b/src/screens/game.module.css
@@ -21,8 +21,8 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* overflow: hidden; */
-  clip: rect(-100vw, auto, auto, auto);
+  overflow: hidden;
+  /* clip: rect(-100vw, auto, auto, auto); */
   min-height: 20vh;
 }
 
