--- a/src/views/handView.module.css
+++ b/src/views/handView.module.css
@@ -18,6 +18,6 @@
 }
 
 .selected {
-  bottom: 15vw;
+  bottom: 10vw;
   padding-left: 2vw;
 }
